button manager shows value on screen

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
 
     <string name="connect">connect</string>
     <string name="grab">grab</string>
+    <string name="release">release</string>
     <string name="tipUp">tip up</string>
     <string name="tipDown">tip down</string>
 </resources>
