--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,9 @@
 <resources>
     <string name="app_name">RoboticSimulatorController</string>
 
-    <string name="connect">connect</string>
+    <string name="turnOn">Turn on Bluetooth</string>
+    <string name="bluetoothNotAvailable">No bluetooth available. We are sorry, but this application is not supported on your device</string>
+    <string name="bluetoothTurnedOff">In order to use this controller application, you have to turn on Bluetooth</string>
     <string name="grab">grab</string>
     <string name="release">release</string>
     <string name="tipUp">tip up</string>
