- added not supported screen, empty screen and bluetooth list logic to MainActivity/presenter - added toast when onActivityResult fails when requesting to turn on bluetooth

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="release">release</string>
     <string name="tipUp">tip up</string>
     <string name="tipDown">tip down</string>
+    <string name="bluetoothProblem">Something went wrong. Please turn on bluetooth in order to use this application</string>
 </resources>
