Bluetooth Discovery, added permissions request with dialog, render name and mac address in BluetoothAdapter ect.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="tipUp">tip up</string>
     <string name="tipDown">tip down</string>
     <string name="bluetoothProblem">Something went wrong. Please turn on bluetooth in order to use this application</string>
+    <string name="name_unavailable">Name unavailable</string>
 </resources>
