--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="paired_devices">Paired Devices</string>
     <string name="other_devices">Other Devices</string>
     <string name="turn_on_location_permission">Turn on location Permission</string>
+    <string name="device_connection_issue">Couldn\'t connect to the device</string>
 </resources>
